genomgång - checkbox & radio-buttons

--- a/index.html
+++ b/index.html
@@ -7,10 +7,27 @@
     <script src="index.js" defer></script>
 </head>
 <body>
-    <h1>Todo-applikation</h1>
-    <input type="text" id="todo">
-    <button id="addTodo">Add todo</button>
-    <h2>Todo list</h2>
-    <ul id="todoList"></ul>
+    <h1>Checkboxes & Radio-buttons</h1>
+
+    <!-- Checkboxes -->
+    <input type="radio" name="color" value="blue" id="blue">
+    <label for="blue">Blå</label>
+    <br>
+    <input type="radio" name="color" value="red" id="red">
+    <label for="red">Röd</label>
+    <br>
+    <input type="radio" name="color" value="green" id="green">
+    <label for="green">Grön</label>
+
+    <!-- Checkboxes -->
+     <br>
+     <label for="check1">Nike</label>
+     <input type="checkbox" name="brands" id="check1" value="Nike">
+     <label for="check2">Adidas</label>
+     <input type="checkbox" name="brands" id="check2" value="Adidas">
+     <label for="check3">Puma</label>
+     <input type="checkbox" name="brands" id="check3" value="Puma">
+
+    <button>Filtrera</button>
 </body>
 </html>
